--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -28,13 +28,45 @@
   display: flex;
   bottom: 3px;
   position: relative;
+  cursor: pointer;
 }
 
 .cart-num {
-  left: -26px;
+  left: -30px;
   top: -7px;
   color: black;
   font-size: 18px;
   position: relative;
   font-weight: bolder;
+  cursor: pointer;
+}
+
+.summary-img {
+  object-fit: contain;
+  width: 250px;
+  height: 250px;
+  padding: 15px;
+}
+
+.summary-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  max-height: 300px;
+  border-radius: 5px;
+  margin: 10px;
+}
+
+.summary-desc {
+  padding-top: 15px;
+  margin-left: 15px;
+}
+
+.back {
+  color: black;
+}
+
+.back:hover {
+  text-decoration: none;
+  color: grey;
 }
