--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -8,6 +8,10 @@
   width: 250px;
 }
 
+.product:hover {
+  transform: translate(2px, 2px);
+}
+
 .wicked-header {
   color: white;
   background-color: black;
