--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -22,6 +22,11 @@
   font-size: 25px;
   color: red;
   margin-left: 5px;
+  transition: all .3s ease-in-out;
+}
+
+.icon:hover {
+  color: rgb(0, 113, 249);
 }
 
 .pokemon-desc {
@@ -44,7 +49,7 @@
 }
 
 .cart:hover {
-  color: rgb(219, 42, 62);
+  color: rgb(0, 113, 249);
 }
 
 .cart-num {
@@ -104,7 +109,7 @@
 }
 
 .grey-shadow:hover {
-  box-shadow: 0 0 3px 1px rgb(219, 42, 62);
+  box-shadow: 0 0 3px 1px rgb(0, 113, 249);
 }
 
 .back, .cust-btn {
@@ -112,11 +117,11 @@
 }
 
 .back:hover {
-  color: rgb(219, 42, 62);
+  color: rgb(0, 113, 249);
 }
 
 .cust-btn:hover {
   color: white;
-  background-color: rgb(219, 42, 62);
-  border-color: rgb(219, 42, 62);
+  background-color: rgb(0, 113, 249);
+  border-color: rgb(0, 113, 249);
 }
