--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -8,7 +8,7 @@
   width: 250px;
 }
 
-.wicked-header {
+.enth-header {
   color: black;
   background-color: white;
   padding: 10px 25px 5px 25px;
@@ -105,7 +105,7 @@
 
 .grey-shadow {
   box-shadow: 0 0 1px 0px rgb(150, 150, 150);
-  transition: all .3s ease-in-out;
+  transition: all .2s ease-out;
 }
 
 .grey-shadow:hover {
